Client: fix sidebar styles where sidebar was too short

--- a/static/style.css
+++ b/static/style.css
@@ -193,7 +193,7 @@ aside {
   flex: 1 auto;
   min-width: 250px;
   max-width: 250px;
-  height: 600px;
+  height: 650px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
